src/test/deca/syntax/invalid/ident_carac_interdit3.deca
//  Description :
//            Identificateur contenant un à
//
// Résultat:
//token recognition error at: 'à'
//
{
identificàteur
}